--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>THREE.Group 对象组合</title>
+    <title>Web360Vision</title>
     <style>
         body {
             margin: 0;
